# Stitches2

./: .gitignore  CMakeLists.txt  main.cpp
Resources/: CMakeLists.txt  Stitches.hpp
Resources/Engine/: Engine.cpp  Engine.hpp
Resources/Files/: Node.cpp  Node.hpp  Node.inl  NodeConstView.cpp  NodeConstView.hpp  NodeConstView.inl  NodeView.cpp  NodeView.hpp  NodeView.inl
Resources/Files/Json/: Json.cpp  Json.hpp
Resources/Graphics/: Graphics.cpp  Graphics.hpp  GraphicsRenderer.cpp  GraphicsRenderer.hpp  Platform.hpp  RenderContainer.hpp  RenderState.cpp  RenderState.hpp  Renderer.hpp  SubRender.hpp  SubRenderHolder.cpp  SubRenderHolder.hpp
Resources/Graphics/Base/: Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  DepthStencilState.cpp  DepthStencilState.hpp  Pipeline.cpp  Pipeline.hpp  Program.cpp  Program.hpp  ProgramCache.cpp  ProgramCache.hpp  ProgramState.cpp  RenderPassDescriptor.cpp  RenderPassDescriptor.hpp  RenderPipeline.hpp  Shader.cpp  Shader.hpp  ShaderCache.cpp  ShaderCache.hpp  ShaderModule.cpp  ShaderModule.hpp  SubRender.hpp  SubRenderHolder.cpp  SubRenderHolder.hpp  Texture.cpp  Texture.hpp  Types.cpp  Types.hpp  VertexLayout.hpp
Resources/Graphics/Command/: CustomCommand.cpp  RenderCommand.cpp  RenderCommand.hpp  TrianglesCommand.cpp  TrianglesCommand.hpp
Resources/Graphics/Image/: Bitmap.cpp  Image.hpp
Resources/Graphics/OpenGLES/: BufferGL.cpp  BufferGL.hpp  CommandBufferGL.cpp  CommandBufferGL.hpp  GLStateSave.cpp  GLStateSave.hpp  ProgramGL.cpp  ProgramGL.hpp  RenderPipelineGL.cpp  RenderPipelineGL.hpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderGL.cpp  ShaderGL.hpp  ShaderModuleGL.cpp  ShaderModuleGL.hpp  TextureGL.cpp  TextureGL.hpp  UtilsGL.cpp  UtilsGL.hpp
Resources/Graphics/Render/: Renderer.cpp  Renderer.hpp  Texture2D.cpp  Texture2D.hpp
Resources/Graphics/Shader/: ImageNormal.hpp  Shader.hpp
Resources/Math/: Colour.cpp  Colour.hpp  Colour.inl  ElapsedTime.cpp  ElapsedTime.hpp  Math.hpp  Maths.cpp  Maths.hpp  Matrix2.cpp  Matrix2.hpp  Matrix3.cpp  Matrix3.hpp  Matrix4.cpp  Matrix4.hpp  Quaternion.cpp  Quaternion.hpp  Time.hpp  Time.inl  Transform.cpp  Transform.hpp  Vector2.cpp  Vector2.hpp  Vector2.inl  Vector3.cpp  Vector3.hpp  Vector3.inl  Vector4.cpp  Vector4.hpp  Vector4.inl
Resources/Third/glfw/include/GLFW/: glfw3.h
Resources/Utils/: ConstExpr.hpp  Module.hpp  NonCopyable.hpp  Ref.cpp  Ref.hpp  String.cpp  String.hpp  TypeInfo.hpp
Resources/Window/: Monitor.cpp  Monitor.hpp  Window.cpp  Window.hpp
Src/: CMakeSources.txt  Stitches.hpp
Src/Engine/: Engine.cpp
Src/Files/: Files.cpp  Files.hpp  Node.inl  NodeConstView.hpp  NodeConstView.inl  NodeView.hpp  NodeView.inl
Src/Files/Json/: Json.hpp
Src/Graphics/: RenderContainer.cpp  SubRender.hpp
Src/Graphics/Base/: Buffer.hpp  CommandBuffer.cpp  Program.hpp  ProgramCache.cpp  ProgramState.hpp  RenderPassDescriptor.cpp  RenderPassDescriptor.hpp  ShaderCache.hpp  ShaderModule.cpp  ShaderModule.hpp  Texture.hpp  VertexLayout.cpp
Src/Graphics/Command/: CustomCommand.cpp  CustomCommand.hpp  GroupCommand.cpp  GroupCommand.hpp  RenderQueue.cpp  RenderQueue.hpp  TrianglesCommand.cpp  TrianglesCommand.hpp
Src/Graphics/Image/: Bitmap.hpp  Image.cpp
Src/Graphics/OpenGLES/: BufferGL.hpp  CommandBufferGL.cpp  CommandBufferGL.hpp  ProgramGL.cpp  ShaderModuleGL.cpp
Src/Graphics/Render/: Texture2D.cpp  Texture2D.hpp
Src/Math/: Colour.cpp  Colour.hpp  ElapsedTime.hpp  Matrix3.hpp  Matrix4.cpp  Matrix4.hpp  Quaternion.hpp  Vector3.hpp  Vector4.cpp  Vector4.inl
Src/Utils/: ConstExpr.hpp  Module.hpp  String.cpp  String.hpp  TypeInfo.hpp
Src/Window/: Window.cpp  Window.hpp
Test/: CMakeLists.txt
Test/Image/: ImageRender.cpp  ImageRender.hpp  ImageSubRender.cpp  ImageSubRender.hpp
Third/glad/include/glad/: glad.h
Third/glad/src/: glad.c
Third/gles/include/vulkan/: vk_sdk_platform.h
Third/glfw/include/GLFW/: glfw3.h
cmake/Modules/: RequireFunctionExists.cmake  RequireIncludeFile.cmake
src/Files/: Node.cpp  Node.hpp
src/Files/Json/: Json.cpp
src/Math/: ElapsedTime.cpp  Math.hpp  Maths.cpp  Maths.hpp  Quaternion.cpp  Time.hpp  Time.inl  Transform.cpp  Vector2.hpp
src/Utils/: String.hpp
